# fastapi-django

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: Аутентификация.md  Валидация входящих данных.md  Команды.md  Логирование.md  Названия для библиотеки.md  Отправка электронных писем.md  Пермишены.md  Работа с БД, репозитории.md  Расширяемость.md  Создание и запуск приложения.md  Специфичная для проекта библиотека.md  Фильтрация, пагинация, сортировка.md  Шаблонизация.md
fastapi_django/: __init__.py  app.py  constants.py  logging.py  management.py  template.py
fastapi_django/auth/: __init__.py  authentication.py
fastapi_django/auth/some_kz_lib/: dependencies.py  usr_adm.py  usr_adm_auth.py
fastapi_django/conf/: __init__.py  global_settings.py
fastapi_django/db/: __init__.py  dependencies.py  exceptions.py  sessions.py  types.py  utils.py
fastapi_django/db/models/: base.py
fastapi_django/db/repositories/: __init__.py  base.py  builder.py  lookups.py  queryset.py
fastapi_django/db/services/: list.py
fastapi_django/docs/: views.py
fastapi_django/exceptions/: http.py
fastapi_django/mail/: __init__.py  message.py  utils.py
fastapi_django/mail/backends/: base.py  console.py  dummy.py  filebased.py  locmem.py  smtp.py
fastapi_django/management/: __init__.py  cli.py  utils.py
fastapi_django/permissions/: __init__.py  base.py
fastapi_django/schema/: __init__.py
fastapi_django/utils/: __init__.py  encoding.py  functional.py  logging.py  module_loading.py
tests/: test_fastapi_django.py
(+3 files in other folders)
